--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,17 @@
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/fruits
-quarkus.datasource.jdbc.driver=org.postgresql.Driver
-quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=postgres
-quarkus.datasource.password=mipassword
 
+#Default profile
+quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/fruits
+quarkus.datasource.jdbc.driver=org.mariadb.jdbc.Driver
+quarkus.datasource.db-kind=mariadb
+quarkus.datasource.username=root
+quarkus.datasource.password=2808
 quarkus.hibernate-orm.database.generation=update
 
-%test.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/fruits_test
-%test.quarkus.datasource.jdbc.driver=org.postgresql.Driver
-%test.quarkus.datasource.db-kind=postgresql
-%test.quarkus.datasource.username=postgres
-%test.quarkus.datasource.password=mipassword
+
+# Test profile
+%test.quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/fruits_test
+%test.quarkus.datasource.jdbc.driver=org.mariadb.jdbc.Driver
+%test.quarkus.hibernate-orm.database.generation=update
+%test.quarkus.datasource.db-kind=mariadb
+%test.quarkus.datasource.username=root
+%test.quarkus.datasource.password=2808
