Añadir docker-compose y cambiar configuracion para base de datos docker compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 #Default profile
-quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/fruits
+quarkus.datasource.jdbc.url=jdbc:mariadb://db:3306/fruits
 quarkus.datasource.jdbc.driver=org.mariadb.jdbc.Driver
 quarkus.datasource.db-kind=mariadb
-quarkus.datasource.username=root
+quarkus.datasource.username=user
 quarkus.datasource.password=2808
 quarkus.hibernate-orm.database.generation=update
 
